--- a/bios/Cargo.toml
+++ b/bios/Cargo.toml
@@ -10,8 +10,9 @@ gilrs = "0.11.0" # gamepad input library
 futures = "0.3.30"
 dirs = "6.0.0"
 whoami = "1.4.1"
-sysinfo = "0.37.2"
+sysinfo = "0.36.0"
 tar = "0.4.40"
+flate2 = "1.0" # gzip compression/decompression
 walkdir = "2.4.0"
 chrono = { version = "0.4", features = ["serde"] } # clock
 serde = { version = "1.0", features = ["derive"] } # for checking the splash screen setting
@@ -20,19 +21,22 @@ toml = "0.9.8" # loading custom themes (and for config.toml)
 tokio = { version = "1.47.1", features = ["full"] }
 rand = "0.9.2" # for generating a random message every time the BIOS loads
 regex = "1" # parsing command output for fetching audio sinks
-home = "0.5" # reliably find user's home directory
+home = "0.5.10" # reliably find user's home directory
 reqwest = { version = "0.12.24", features = ["blocking", "json"] } # handle HTTP requests
 zip = "6.0.0" # handle zip extraction
-bluer = { version = "0.17.4", features = ["bluetoothd"] } # bluetooth
 tempfile = "3.23.0" # for downloading runtime files
+kazeta-overlay = { path = "../overlay" } # overlay client for in-game notifications
 
 # CD-ROM support
 cd-da-reader = "0.1.0"
 rodio = "0.21.1"
 
 # video support
-ffmpeg-next = "7.1.0"
+ffmpeg-next = "8.0.0"
 image = "0.25.9"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+bluer = { version = "0.17.4", features = ["bluetoothd"] } # bluetooth
 
 [features]
 default = []
