--- a/overlay/Cargo.toml
+++ b/overlay/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/lib.rs"
 
 [features]
 default = []
-daemon = ["macroquad", "cocoa", "objc", "gilrs", "sysinfo"]
+daemon = ["macroquad", "cocoa", "objc", "gilrs", "sysinfo", "dirs"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
