--- a/ra/Cargo.toml
+++ b/ra/Cargo.toml
@@ -23,6 +23,7 @@ tokio = { version = "1", features = ["full"] }
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.8"
 
 # Hashing (for ROM identification)
 md-5 = "0.10"
@@ -40,4 +41,11 @@ dirs = "5.0"
 
 # Time
 chrono = { version = "0.4", features = ["serde"] }
+
+# Archive support (for reading cartridge TOML)
+tar = "0.4"
+flate2 = "1.0"
+
+[dev-dependencies]
+tempfile = "3.8"
 
