fix: update kazeta-profile-loader.service and kazeta-session behavior
- Added RemainAfterExit=yes to kazeta-profile-loader.service to ensure it remains active after execution.
- Modified ExecStart in kazeta-profile-loader.service to use a non-fatal call for loading profiles, preventing failures if the device is unavailable.
- Updated kazeta-session to comment out the exit 1 line and added a reboot command for better handling of session restarts.

--- a/rootfs/etc/systemd/system/kazeta-profile-loader.service
+++ b/rootfs/etc/systemd/system/kazeta-profile-loader.service
@@ -6,10 +6,12 @@ After=inputplumber.service user@1000.service
 
 [Service]
 Type=oneshot
+RemainAfterExit=yes
 # The small delay is still a good idea to prevent any race conditions
 ExecStartPre=/bin/sleep 2
 # This is the exact busctl command you provided
-ExecStart=/usr/bin/busctl call org.shadowblip.InputPlumber /org/shadowblip/InputPlumber/CompositeDevice0 org.shadowblip.Input.CompositeDevice LoadProfilePath "s" /usr/share/inputplumber/profiles/steam-deck.yaml
+# Use '-' prefix to make this non-fatal if the device doesn't exist yet
+ExecStart=-/usr/bin/busctl call org.shadowblip.InputPlumber /org/shadowblip/InputPlumber/CompositeDevice0 org.shadowblip.Input.CompositeDevice LoadProfilePath "s" /usr/share/inputplumber/profiles/steam-deck.yaml
 
 [Install]
 WantedBy=multi-user.target
