fix: update build-image.sh and configuration for miniquad patch management
- Added logic to temporarily disable the miniquad patch for production builds in build-image.sh.
- Implemented restoration of the miniquad patch configuration after build errors.
- Updated .cargo/config.toml to clarify the purpose of the miniquad patch and its usage in production builds.
- Commented out platform configuration in BIOS and overlay to prevent issues during production builds.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,4 +1,8 @@
 [patch.crates-io]
-# Patch miniquad to include null checks around Objective-C strings on macOS,
-# preventing startup crashes when Cocoa returns nil (e.g., in non-bundle runs).
+# Patch miniquad with macOS-specific null checks for Objective-C strings
+# This prevents crashes when Cocoa returns nil (e.g., in non-bundle runs on macOS)
+#
+# NOTE: This patch is ONLY for macOS development. Production Linux builds temporarily
+# disable this patch (see build-image.sh) to use upstream miniquad from crates.io.
+# Our application code explicitly sets linux_backend: X11WithWaylandFallback for production.
 miniquad = { path = "vendor/miniquad" }
